--- a/public/login.html
+++ b/public/login.html
@@ -6,20 +6,37 @@
 
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <!-- Custom function -->
 
     <!-- Custom styles -->
 
   </head>
   <body>
-    <div>
-    </div>
+    <div class="login-wrapper fadeInDown">
+      <div id="formContent">
+          <div class="fadeIn first">
+            <img src="/images/fastspring-logo.png" id="fsLogo" alt="Login Logo" />
+          </div>
+
+          <form class"form-signin" id="loginForm">
+            <p> Please provide your API credentials to log in to your portal </p>
+            <input type="text" id="username" class="fadeIn second" name="login" placeholder="API Username">
+            <input type="text" id="password" class="fadeIn third" name="login" placeholder="API Password">
+            <input type="submit" class="fadeIn fourth" value="Log In">
+         </form>
+
+         <div id="formFooter">
+           <a class="underlineHover" href="#">Where are my API credentials?</a>
+         </div>
+       </div>
+     </div>
 
 
 
-      <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
 
 </html>
