--- a/public/login.html
+++ b/public/login.html
@@ -11,7 +11,8 @@
     <!-- Custom function -->
 
     <!-- Custom styles -->
-
+    <link rel="stylesheet" href="/styles/custom.css">
+    
   </head>
   <body>
     <div class="login-wrapper fadeInDown">
