target blank redirect

--- a/public/login.html
+++ b/public/login.html
@@ -30,7 +30,7 @@
          </form>
 
          <div id="formFooter">
-           <a class="underlineHover" href="https://fastspring.com/docs/fastspring-api/">Where are my API credentials?</a>
+           <a class="underlineHover" href="https://fastspring.com/docs/fastspring-api/" target="_blank">Where are my API credentials?</a>
          </div>
        </div>
      </div>
